--- a/apidoc/Titanium/UI/TabbedBar.yml
+++ b/apidoc/Titanium/UI/TabbedBar.yml
@@ -53,26 +53,26 @@ properties:
         In Android [style](Ti.UI.TabbedBar.style) is only supported in the creation dictionary 
         of the proxy.
     type: Number
-    default: Titanium.UI.iOS.SystemButtonStyle.PLAIN for iOS, Ti.UI.TABS_STYLE_DEFAULT for Android
+    default: Titanium.UI.iOS.SystemButtonStyle.PLAIN for iOS, Titanium.UI.TABS_STYLE_DEFAULT for Android
 examples:
   - title: Simple Tabbed Bar with 3 items
     example: |
         
-            var bb1 = Ti.UI.createTabbedBar({
-            	labels: ['One', 'Two', 'Three'],
+            var tabbedBar = Ti.UI.createTabbedBar({
+            	labels: [ 'One', 'Two', 'Three' ],
             	backgroundColor: '#336699',
             	style: Ti.UI.iOS.SystemButtonStyle.BAR,
             	width: 200,
             	height: 25,
             	top: 50
             });
-            win.add(bb1);
+            win.add(tabbedBar);
 
   - title: TabGroup like behavior for views instead of windows
     example: |
             var win = Ti.UI.createWindow({ layout: 'vertical' });
             var tabbedBar = Ti.UI.createTabbedBar({
-                labels: ['One', 'Two', 'Three'],
+                labels: [ 'One', 'Two', 'Three' ],
                 backgroundColor: '#336699',
                 height: '10%',
                 width: Ti.UI.FILL
@@ -84,13 +84,13 @@ examples:
                 layout: 'horizontal'
             });
 
-            for (i = 0; i < tabbedBar.labels.length; i++) {
-                scrollView.add( Ti.UI.createView({ backgroundColor: '#'+Math.random().toString(16).substr(-6)}))
+            for (var i = 0; i < tabbedBar.labels.length; i++) {
+                scrollView.add( Ti.UI.createView({ backgroundColor: '#' + Math.random().toString(16).substr(-6) }));
             }
 
             tabbedBar.addEventListener('click', function(e) {
-                scrollView.scrollTo(e.index * win.rect.width, 0, {animated: true});
-            })
+                scrollView.scrollTo(e.index * win.rect.width, 0, { animated: true });
+            });
 
             win.add(scrollView);
             win.add(tabbedBar);
