--- a/apidoc/Titanium/UI/TabbedBar.yml
+++ b/apidoc/Titanium/UI/TabbedBar.yml
@@ -40,20 +40,10 @@ properties:
     type: [Array<String>, Array<BarItemType>]
   - name: style
     summary: Style of the tabbed bar.
-    description: |
-        Specify one of the constants:
-        For iOS: 
-        [Titanium.UI.iOS.SystemButtonStyle](Titanium.UI.iOS.SystemButtonStyle),
-        either `PLAIN`, `BORDERED`, or `BAR`.
-        
-        The `BAR` style specifies a more compact style and allows the bar's background
-        color or gradient to show through.
-        For Android:
-        [Titanium.UI.TABS_STYLE_*]
-        In Android [style](Ti.UI.TabbedBar.style) is only supported in the creation dictionary 
-        of the proxy.
+    availability: creation
     type: Number
-    default: Titanium.UI.iOS.SystemButtonStyle.PLAIN for iOS, Titanium.UI.TABS_STYLE_DEFAULT for Android
+    constants: Titanium.UI.Android.TABS_STYLE_*
+    default: Titanium.UI.Android.TABS_STYLE_DEFAULT
 examples:
   - title: Simple Tabbed Bar with 3 items
     example: |
@@ -61,7 +51,6 @@ examples:
             var tabbedBar = Ti.UI.createTabbedBar({
             	labels: [ 'One', 'Two', 'Three' ],
             	backgroundColor: '#336699',
-            	style: Ti.UI.iOS.SystemButtonStyle.BAR,
             	width: 200,
             	height: 25,
             	top: 50
@@ -85,7 +74,7 @@ examples:
             });
 
             for (var i = 0; i < tabbedBar.labels.length; i++) {
-                scrollView.add( Ti.UI.createView({ backgroundColor: '#' + Math.random().toString(16).substr(-6) }));
+                scrollView.add(Ti.UI.createView({ backgroundColor: '#' + Math.random().toString(16).substr(-6) }));
             }
 
             tabbedBar.addEventListener('click', function(e) {
